# w25q32jv

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
examples/: async.rs  device_id.rs  erase-write-read.rs  erase.rs  read.rs  traits.rs  write.rs
src/: lib.rs  w25q32jv.rs  w25q32jv_async.rs
