[package]
name = "w25q32jv"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
embedded-hal-async = "0.2.0-alpha.1"
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"

[dev-dependencies]
nrf9160-rust-starter = { git = "https://github.com/tweedegolf/nrf9160-rust-starter" }
nrf9160-hal = "0.16.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
embassy-executor = { version = "0.1.1", features = ["arch-cortex-m", "executor-thread", "nightly", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly"] }
embassy-nrf = { version = "0", features = ["nightly", "nrf9160-ns", "unstable-pac", "time-driver-rtc1", "defmt", "unstable-traits", "time", "gpiote"] }
embassy-sync = { version = "0.2.0", features = ["nightly"] }
embassy-futures = "0.1.0"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "46227be" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "46227be" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "46227be" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "46227be" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "46227be" }

[lib]
harness = false

[profile.release]
debug = true
lto = true
