[package]
name = "w25q32jv"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An embedded-hal driver for the W25Q32JV"
homepage = "https://github.com/tweedegolf/w25q32jv"
repository = "https://github.com/tweedegolf/w25q32jv"
readme = "README.md"
keywords = ["no_std", "embedded", "flash", "w25q32jv"]

[dependencies]
embedded-hal = "1.0.0-alpha.10"
embedded-storage = "0.3.0"
embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }
embedded-storage-async = { version = "0.4.0", optional = true }
defmt = { version = "0.3", optional = true }

[features]
default = ["async"]
async = ["dep:embedded-hal-async", "dep:embedded-storage-async"]
defmt = ["dep:defmt"]

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "nightly", "integrated-timers"] }
embassy-nrf = { version = "0", features = ["nightly", "nrf9160-s", "unstable-pac", "time-driver-rtc1", "unstable-traits", "time", "gpiote"] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "46227be" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "46227be" }

[profile.release]
debug = true
lto = true
